<resources>
    <string name="app_name">PUNTO CYTRUSS</string>
    <string name="action_settings">Configuraciones</string>
    <string name="contentDescription">Logo</string>
    <string name="userNick">Usuario:</string>
    <string name="userPassword">Contraseña:</string>
    <string name="btnLoginText">Iniciar Sesión</string>
    <string name="loginInvalid">Credenciales invalidas.</string>
    <string name="SpDefault">Seleccione una categoría:</string>
    <string name="itemMenu1">Inicio</string>
    <string name="itemMenu2">Clientes</string>
    <string name="itemMenu3">Formas de pago</string>
    <string name="itemMenu4">Departamentos</string>
    <string name="itemMenu6">Proveedores</string>
    <string name="itemMenu7">Categorías</string>
    <string name="itemMenu8">Productos</string>
    <string name="itemMenu9">Tipo de Documento</string>
    <string name="itemMenu10">Punto de Venta</string>
    <string name="itemMenu11">Retiro de Caja</string>
    <string name="itemMenu13">Tienda</string>
    <string name="itemMenu12">Cierre de Caja</string>
    <string name="itemMenu14">Ventas</string>
    <string name="itemMenu15">Ingresos a Caja</string>
    <string name="itemMenu16">Recibo de mercancía</string>
    <string name="itemMenu17">Stock</string>
    <string name="itemMenu5">Cerrar sesión</string>
    <string name="edtClientName">Cliente.</string>
    <string name="edtClientCurp">CURP.</string>
    <string name="delClientWarningMessage">¿Estas seguro de eliminar el cliente?</string>
    <string name="delClientWarningTitle">¡Adevertencia!</string>
    <string name="deleteClientSuccess">Cliente eliminado correctamente.</string>
    <string name="pageTitle">Cliente</string>
    <string name="edtLastName1">Apellido Paterno.</string>
    <string name="edtLastName2">Apellido Materno.</string>
    <string name="edtCreditLimit">Límite de crédito.</string>
    <string name="edtCreditDays">Días de créditos.</string>
    <string name="edtGenre">Género.</string>
    <string name="edtAddress">Dirección.</string>
    <string name="edtIneString">Cadena de INE.</string>
    <string name="edtPhotoClient">Foto del cliente.</string>
    <string name="edtPhotoIne">Foto del INE</string>
    <string name="edtMail">Correo</string>
    <string name="edtPhone">Teléfono</string>
    <string-array name="genres">
        <item>Selecciona:</item>
        <item>M</item>
        <item>F</item>
        <item>O</item>
    </string-array>
    <string name="btnAddClient">Agregar Cliente</string>
    <string name="edtDepartamentoDesc">Departamento.</string>
    <string name="btnAddDepartament">Agregar Departamento</string>
    <string name="delDepartamentWarningMessage">¿Estás seguro de eliminar el departamento?</string>
    <string name="delDepartamentWarningTitle">¡Advertencia!</string>
    <string name="deleteDepartamentSuccess">Departamento eliminado correctamente.</string>
    <string name="btnAddWayPay">Agregar forma de pago</string>
    <string name="addImage">Agregar Forma de Pago</string>
    <string name="edtWayPayDescription">Descripción forma de pago</string>
    <string name="imvImage">Imagen de forma de pago.</string>
    <string name="delWayPayWarningMessage">¿Estás seguro de eliminar la forma de pago?</string>
    <string name="delWayPayWarningTitle">¡Advertencia!</string>
    <string name="deleteWayPaySuccess">Forma de pago eliminada correctamente.</string>
    <string name="pageTitleWayPay">Forma de Pago</string>
    <string name="delProviderWarningMessage">¿Estás seguro de eliminar el proveedor?</string>
    <string name="askProvider">Debes de tener al menos un proveedor registrado ¿Deseas registrar un proveedor?</string>
    <string name="delProviderWarningTitle">¡Advertencia!</string>
    <string name="deleteProviderSuccess">Proveedor eliminado correctamente.</string>
    <string name="pageTitleSupplier">Proveedores</string>
    <string name="edtProviderName">Nombre.</string>
    <string name="edtProviderRFC">RFC.</string>
    <string name="edtProviderDatePay">Fecha de pago.</string>
    <string name="edtProviderAlias">Alias.</string>
    <string name="edtProviderCurp">CURP.</string>
    <string name="edtProviderPhone">Teléfono.</string>
    <string name="edtProviderEmail">Correo electrónico.</string>
    <string name="edtProviderComments">Comentarios.</string>
    <string name="edtProviderCreditLimit">Límite de credito</string>
    <string name="edtProviderCreditDays">Días de crédito.</string>
    <string name="edtProviderDiconsa">ERP</string>
    <string name="edtProviderStatus">Estatus</string>
    <string name="edtProductName">Producto.</string>
    <string name="askCategory">Debes de tener al menos una categoria registrada ¿Deseas registrar una categoría?</string>
    <string name="categoryWawning">¡No hay categorías registradas!</string>
    <string name="delProductWarningMessage">¿Estás seguro de eliminar el producto?</string>
    <string name="delProductWarningTitle">¡Advertencia!</string>
    <string name="deleteProductSuccess">El producto se elimino correctamente.</string>
    <string name="pageTitleProduct">Producto</string>
    <string name="edtProductCode">Código.</string>
    <string name="edtProductAlternateCode">Código alterno.</string>
    <string name="edtProductDescription">Descripción</string>
    <string name="edtProductMax">Max.</string>
    <string name="edtProductMin">Min.</string>
    <string name="edtProductReorderPoint">Punto de reorden.</string>
    <string name="edtProductUnitMeasurement">Unidad Medida.</string>
    <string name="edtProductUnitMeasurementPurchase">Unidad medida compra.</string>
    <string name="edtProductFactor">Factor.</string>
    <string name="txvProductService">Servicio</string>
    <string name="txvProductDiconsa">ERP.</string>
    <string name="txvProductCategory">Categoría</string>
    <string name="txvProductGranel">Granel.</string>
    <string name="edtProductCost">Costo</string>
    <string name="edtProductCostLastPurchase">Costo ultima compra</string>
    <string name="edtProductDate">Fecha ultima compra</string>
    <string name="pageTitleFragmentProduct">Información del producto</string>
    <string name="pageTitleFragmentProductPrice">Precio del producto</string>
    <string name="txvProductPriceLevel">Nivel</string>
    <string name="edtProductPricePrice">Precio</string>
    <string name="edtProductPriceCost">Costo</string>
    <string name="edtProductPriceQuantity">Cantidad</string>
    <string name="edtProductPricePercentage">% de  utilidad</string>
    <string name="edtCategory">Categoría.</string>
    <string name="askDepartment">Debes de tener al menos un deparamento registrado. ¿Deseas registrar un nuevo departamento?</string>
    <string name="departmentWarning">No hay departamentos registrados</string>
    <string name="edtCategoryDescription">Descripción</string>
    <string name="edtCategoryDepartment">Departamentos</string>
    <string name="edtTypeDocument">Tipo de Documento.</string>
    <string name="delTypeDocumentWarningMessage">¿Estás seguro de eliminar el tipo de documento?</string>
    <string name="delTypeDocumentWarningTitle">¡Alerta!</string>
    <string name="deleteTypeDocumentSuccess">El tipo de documento eliminado correctamente.</string>
    <string name="edtTypeDocumentDescription">Descripción.</string>
    <string name="txtTypeDocumentModel">Modelo</string>
    <string name="edtTypeDocumentConsecutive">Consecutivo</string>
    <string-array name="module">
        <item>VTA</item>
        <item>OC</item>
    </string-array>
    <string name="edtDateWithdrawal">Fecha.</string>
    <string name="delWithdrawalWarningMessage">¿Estás seguro de generar el retiro de caja?</string>
    <string name="delWithdrawalWarningTitle">¡Alerta!</string>
    <string name="deleteWithdrawalSuccess">Retiro de caja generado correctamente.</string>
    <string name="tvOcurrioUnError">Ocurrio un error al consultar tienda</string>
    <string name="edtCommentsWithdrawal">Comentarios.</string>
    <string name="edtAmountWithdrawal">Monto.</string>
    <string name="dateCashShortview">Fecha:</string>
    <string name="titleCashClosing">Últimos cortes de caja</string>
    <string name="edtCashShortAmountCal">Monto calculado</string>
    <string name="edtCashShortAmountCap">Monto capturado</string>
    <string name="edtCashShortCambio">Cambio</string>
    <string name="tvSaleCompleted">Venta completada</string>
    <string name="tvComplete">Completo</string>
    <string name="btnSearch">Buscar</string>
    <string name="btnSave">Guardar</string>
    <string name="fieldRequired">Campo requerido.</string>
    <string name="messageSuccTitleGlobal">¡Éxito!</string>
    <string name="messageErrTitleGlobal">¡Error!</string>
    <string name="addPhoto">Agregar foto.</string>
    <string name="takePhoto">Tomar foto.</string>
    <string name="zeroNumber">0.00</string>
    <string name="pricesing">$</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogOk">Ok</string>
    <string name="btnPay">Pagar</string>
    <string name="txvItem">Artículo</string>
    <string name="txvItems">Items</string>
    <string name="txvPesos">$</string>
    <string name="txvUnitPrice">P.U</string>
    <string name="txvUtility">Utilidad </string>
    <string name="txvSaleUtility">Utilidad por venta </string>
    <string name="delProductSaleWarningMessage">¿Deseas eliminar los productos de la lista?</string>
    <string name="delProductSaleWarningTitle">¡Advertencia!</string>
    <string-array name="categories">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="titleProfileStore">Información de la Tienda</string>
    <string name="informationOwner">Información del propietario</string>
    <string name="nameOwner">Nombre: </string>
    <string name="lastnameOwner">Apellido: </string>
    <string name="directionOwner">Dirección: </string>
    <string name="phoneNumberOwner">Teléfono: </string>
    <string name="options">Options: </string>
    <string name="ubication">Ubicación: </string>
    <string name="latitude">Latitud: </string>
    <string name="longitude">Longitud: </string>
    <string name="tvStoreName">Tienda:</string>
    <string name="tvNameOwner">Propietario:</string>
    <string name="tvDirectionStore">Dirección:</string>
    <string name="tvLatitudeStore">Latitud:</string>
    <string name="tvLongitudeStore">Longitud</string>
    <string name="tvPhoneStore">Teléfono:</string>
    <string name="imvStore">Imagen de la tienda</string>
    <string name="imvProduct">Image Product</string>
    <string name="dialogCodeProduct"> Code</string>
    <string name="dialogDescriptionProduct"> Description</string>
    <string name="dialogPriceProduct"> Price</string>
    <string name="dialogDiscountProduct">Apply Discount</string>
    <string name="dialogTitleClient">Cliente</string>
    <string name="dialogTitleEstatus">Estatus:</string>
    <string name="dialogAddClient">Agregar cliente</string>
    <string name="edtClientPay">Pago cliente</string>
    <string name="tvDiscountDetailSale">Descuento</string>
    <string name="tvSubtotalDetailSale">Subtotal</string>
    <string name="tvIVADetailSale">IVA</string>
    <string name="tvPayDetailSale">Pago</string>
    <string name="titleDetailSale">Detalle de venta</string>
    <string name="dialogAddNewClient">Desea agregar un nuevo cliente?</string>
    <string name="txvSelectedWayPay">Seleccione una forma de pago:</string>
    <string name="edtDateIncome">Fecha.</string>
    <string name="delIncomeWarningMessage">¿Estas seguro de gerenar el ingreso a caja ?</string>
    <string name="delIncomeWarningTitle">¡Alerta!</string>
    <string name="deleteIncomeSuccess">Ingreso generado correctamnete.</string>
    <string name="edtCommentsIncome">Comentarios.</string>
    <string name="edtAmountIncome">Monto.</string>
    <string name="titleTicketToolbar">Ticket</string>
</resources>