<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/dip_10">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dip_10"
    tools:context=".view.CrudDepartmentView">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dip_10"
        app:cardCornerRadius="@dimen/dip_7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dip_5">

                <EditText
                    android:id="@+id/edtCatDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtCategoryDescription"
                    android:fontFamily="@font/segoeui"
                    android:maxLines="1"
                    android:focusable="true"
                    android:textSize="@dimen/dip_13"
                    android:singleLine="true"
                    android:textColor="@color/bluePantone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:layout_marginTop="@dimen/dip_10"
                    android:layout_marginBottom="@dimen/dip_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/edtCategoryDepartment"
                        android:textSize="@dimen/dip_13"
                        android:fontFamily="@font/segoeui"
                        android:textColor="@color/bluePantone" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/bluePantone">

                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dip_2"
                android:background="@color/windowBackground" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSaveCategory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dip_40"
                android:layout_marginBottom="@dimen/dip_10"
                android:textSize="@dimen/dip_15"
                android:background="@drawable/degradado_buttons"
                android:fontFamily="@font/segoeui"
                android:text="@string/btnSave"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
